# hexkit

./: Cargo.toml  LICENSE  README.md
examples/: README.md  async_basic_email_flow.rs  async_retry_timeout_policy.rs  sync_basic_in_memory.rs  sync_composition_root_trait_objects.rs  sync_driven_file_persistence.rs  sync_multithread_arc_mutex.rs  sync_outbox_event_emission.rs  sync_owned_vs_borrowed_input.rs
examples/canonical_app_skeleton/: main.rs
examples/canonical_app_skeleton/core/: mod.rs
examples/canonical_app_skeleton/driven/: mod.rs
examples/canonical_app_skeleton/driving/: mod.rs
src/: api.rs  async.rs  lib.rs
tests/: multi_adapters.rs  non_clone.rs  wiring_mode.rs
