[package]
name = "hexkit"
version = "0.1.0"
edition = "2024"
description = "Lightweight boundary traits for hexagonal architecture in Rust"
license = "MIT"
repository = "https://github.com/RAV64/hexkit"
readme = "README.md"
keywords = ["hexagonal", "ports-and-adapters", "architecture", "ddd"]
categories = ["rust-patterns", "development-tools"]

[features]
default = []
async = []

[dependencies]

[[example]]
name = "async_basic_email_flow"
required-features = ["async"]

[[example]]
name = "async_retry_timeout_policy"
required-features = ["async"]
